feat: add support for fixed project paths
Signed-off-by: Augusto Elesbão <aelesbao@users.noreply.github.com>

--- a/ctrlp.config.zsh.example
+++ b/ctrlp.config.zsh.example
@@ -1,16 +1,26 @@
-# Defines global workspaces to be included in the project search paths
-workspaces=(
+# Example config file for Tmux CtrlP
+# Copy it to ~/.config/tmux or ~/.tmux
+
+# Defines project paths to be included in the search list as is
+projects=(
   ~/.config/nvim
+  ~/external/single/project
+)
+
+# Defines global workspaces with git repositories to be included
+# in the project paths
+workspaces=(
   ~/dotfiles
-  ~/work
+  ~/code/work
+  ~/code/freelance
 )
 
 # Assign specific session names for those paths
-add-session-name 'dotfiles' \
+config-session-name 'dotfiles' \
   ~/.config/nvim \
   ~/dotfiles
 
-add-session-name 'work-projects' \
-  ~/work/*
+# All projects under ~/code/work/* will open on a session named 'work'
+config-org-session ~/code 'work'
 
 # vim:ft=zsh
